# err-tree

./: Cargo.toml
.github/workflows/: ci.yml  coverage.yml
crates/err-tree/: Cargo.toml
crates/mishap/: Cargo.toml
crates/mishap-testdata/: Cargo.toml
crates/mishap/src/: lib.rs  mishap.rs  wrapped.rs
crates/mishap/tests/mishap-tests/: display.rs
crates/mishap/tests/outputs/: complex-debug-alternate.txt  complex-debug.txt  complex-display.txt  single-source-debug-alternate.txt  single-source-debug.txt  single-source-display-alternate.txt  single-source-display-tree.txt
crates/serde-err-tree/: Cargo.toml
crates/serde-err-tree/src/: adapter.rs  lib.rs  string_tree.rs  tree.rs
crates/serde-err-tree/tests/outputs/: serialize-complex.json  single-source-serialize.json
crates/serde-err-tree/tests/serde-tests/: main.rs  ser.rs  serde_tests.rs
rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rustdoc/anyhow/: index.html  struct.Chain.html  struct.Error.html
rustdoc/err_tree/: all.html  enum.ErrorTreeSource.html  index.html  sidebar-items.js  struct.ErrorTreeDisplay.html  struct.ErrorTreeSourceDisplay.html  struct.ErrorTreeWrapper.html  struct.ErrorWrapper.html  trait.ErrorTree.html  trait.ErrorTreeExt.html
rustdoc/indent_write/: all.html  index.html
rustdoc/mishap/: all.html  fn.Ok.html  index.html  sidebar-items.js  struct.Mishap.html  trait.WrapAnyhow.html  trait.WrapAnyhows.html  trait.WrapError.html  trait.WrapErrorTree.html  trait.WrapErrorTrees.html  trait.WrapErrors.html  type.Result.html
scripts/: commands.sh
(+475 files in other folders)
