[package]
name = "mishap"
version = "0.1.0"
description = "A library for error handling"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
err-tree = { workspace = true, features = ["anyhow-compat"] }

[dev-dependencies]
expectorate.workspace = true
