[package]
name = "serde-err-tree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
err-tree.workspace = true
serde.workspace = true

[dev-dependencies]
expectorate.workspace = true
mishap.workspace = true
mishap-testdata.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
